--- a/assets/style.css
+++ b/assets/style.css
@@ -28,7 +28,6 @@ h1 {
     font-size: 200%;
     background-color: var(--dark);
     border: 1px solid var(--dark);
-    border-radius: 10px;
     padding: 0px 12px;
 }
 
@@ -51,6 +50,10 @@ body section nav ul {
     justify-content: space-evenly
 }
 
+img:hover{
+    opacity: .5;
+}
+
 /*This is the banner background and text */
 .banner {
     color: white;
@@ -67,7 +70,6 @@ body section nav ul {
     border: 5px solid var(dark);
     background-color: var(--dark);
     width: fit-content;
-    border-radius: 10px;
     padding: 10px;
     display: flex;
     justify-content: space-between;
@@ -80,6 +82,7 @@ body section nav ul {
     border-style: none solid none none;
     padding-right: 1%;
 }
+
 
 .about-me,
 .work,
@@ -132,4 +135,8 @@ body section nav ul {
 
 .contact-info {
     flex-basis: 100%;
+}
+
+#project-one{
+    width: 400%
 }
